--- a/leaflet-omnivorePATCHED/leaflet-omnivore.css
+++ b/leaflet-omnivorePATCHED/leaflet-omnivore.css
@@ -4,3 +4,20 @@
 .wpIcon {
 	opacity: 0.7;
 }
+
+/* supercluster */
+.marker-cluster {
+	background-clip: padding-box;
+	border-radius: 5px;
+	border: 2px outset black;
+	background-color: #969696;
+	opacity: 0.7;
+	display: flex;
+    justify-content: center; /*Центрирование по горизонтали*/
+    align-items: center;     /*Центрирование по вертикали */
+}
+.marker-cluster div {
+	text-align: center;
+	font-weight: bold;
+}
+
