--- a/leaflet-omnivorePATCHED/leaflet-omnivore.css
+++ b/leaflet-omnivorePATCHED/leaflet-omnivore.css
@@ -17,7 +17,12 @@
     align-items: center;     /*Центрирование по вертикали */
 }
 .marker-cluster div {
+	width: 20px;
+	height: 20px;
+	border-radius: 10px;
+	/*background-color: white;*/
 	text-align: center;
 	font-weight: bold;
+	padding-top: 2px;
 }
 
