--- a/galadrielmap.css
+++ b/galadrielmap.css
@@ -1,15 +1,13 @@
 /* Стили, заменяющие соответствующее в оригинальных стилях */
 /* leaflet */
-.leaflet-bar a,
-.leaflet-bar a:hover {
-	background-color: rgba(255,255,255,0.75);
-	width: 4rem;
-	height: 4rem;
-	line-height: 4rem;
+.leaflet-touch .leaflet-bar a {
+	background-color: rgba(255,255,255,0.66);
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
 }
-.leaflet-control-zoom-in,
-.leaflet-control-zoom-out {
-	font-size: 24px;
+.leaflet-top .leaflet-control {
+    margin-top: 40px;
 }
 .leaflet-control-scale-line {
 	font-size: 24px;
@@ -17,7 +15,7 @@
 
 /* leaflet-sidebar-v2 */
 .leaflet-sidebar-tabs {
-	background-color: rgba(255, 255, 255, 0.75); 
+	background-color: rgba(255, 255, 255, 0.66); 
 }
 .leaflet-sidebar-content {
 	background-color: rgba(255, 255, 255, 0.9);
@@ -42,17 +40,17 @@
 }
 @media (max-width: 767px) {
 	.leaflet-sidebar { 	/*  */
-		width: 270px;
-		max-width: 270px; 
+		width: 200px;
+		max-width: 200px; 
 	}
 	.leaflet-sidebar-pane {
-		min-width: 240px; 
+		min-width: 180px; 
 	} 
 	.leaflet-sidebar-left ~ .leaflet-control-container .leaflet-left {
-		left: 280px; 
+		left: 220px; 
 	}
 	.leaflet-sidebar-right ~ .leaflet-control-container .leaflet-right {
-		right: 280px; 
+		right: 220px; 
 	}
 }
 @media (min-width: 768px) and (max-width: 991px) {
@@ -130,6 +128,11 @@ ul {
 }
 .currentTrackName {
 	background-color:  rgba(227, 231, 251, 0.5); /* бледно-голубой */
+}
+@media (max-width: 767px) {
+	.big_symbol {
+		font-size:50px;
+	}
 }
 @media (min-width: 768px) and (max-width: 991px) {
 	.big_symbol {
@@ -212,7 +215,7 @@ ul {
     display: inline-block;
 	font-weight: bold;
 	font-size: 120%;
-	width: 6rem;
+	width: 7rem;
     border: 1px solid;
     border-radius: 5px;
     text-align: center;
@@ -232,6 +235,13 @@ ul {
 }
 .routeControls > input[type="radio"]:disabled + label {
 	opacity: 0.3;
+}
+
+/* копирование в буфер обмена */
+.CopyToClipboardClass {
+    justify-content: center; /*Центрирование по горизонтали*/
+    align-items: center;     /*Центрирование по вертикали */
+    text-align: center;
 }
 
 /*  */
