--- a/dashboard.css
+++ b/dashboard.css
@@ -26,7 +26,7 @@
 		font-size:10px;
 	}
 }
-@media (min-height: 357px) and (max-height: 576px) {
+@media (min-height: 357px) and (max-height: 576px) { /* SONY Reader PRS-T1 800x562 */
 	.big_symbol {
 		font-size:250px;
 	}
@@ -56,7 +56,7 @@
 }
 @media (min-height: 744px) and (max-height: 899px) {
 	.big_symbol {
-		font-size:400px;
+		font-size:350px;
 	}
 	.mid_symbol {
 		font-size:50px;
