--- a/galadrielmap.css
+++ b/galadrielmap.css
@@ -119,9 +119,35 @@
 .leaflet-sidebar-tabs > ul {
 	margin: 1rem auto;
 }
-.leaflet-sidebar-tabs > li, .leaflet-sidebar-tabs > ul > li {
-	margin: 0.75rem auto;
+
+@media (min-height: 500px) {
+	.leaflet-sidebar-tabs > li, .leaflet-sidebar-tabs > ul > li {
+		margin: 0 auto;
+	}
+	#MOB-tab {
+		margin-top:1rem;
+		margin-bottom:1rem;
+	}
 }
+@media (min-height: 501px) and (max-height: 649px) {
+	.leaflet-sidebar-tabs > li, .leaflet-sidebar-tabs > ul > li {
+		margin: 0.5rem auto;
+	}
+	#MOB-tab {
+		margin-top:1rem;
+		margin-bottom:50%;
+	}
+}
+@media (min-height: 650px) {
+	.leaflet-sidebar-tabs > li, .leaflet-sidebar-tabs > ul > li {
+		margin: 0.75rem auto;
+	}
+	#MOB-tab {
+		margin-top:1rem;
+		margin-bottom:100%;
+	}
+}
+
 .leaflet-sidebar-tabs > ul > li > a > img {
 	vertical-align: middle;
 }
