--- a/dashboard.css
+++ b/dashboard.css
@@ -1,3 +1,6 @@
+img {
+	width: 16px;
+}
 @media (max-height: 255px) {
 	.big_symbol {
 		font-size:200px;
@@ -10,6 +13,13 @@
 	}
 	.small_symbol {
 		font-size:7px;
+	}
+	img {
+		width: 10px;
+	}
+	img.small {
+		width: 5px;
+		vertical-align: middle;
 	}
 }
 @media (min-height: 256px) and (max-height: 356px) {
@@ -25,6 +35,13 @@
 	.small_symbol {
 		font-size:10px;
 	}
+	img {
+		width: 15px;
+	}
+	img.small {
+		width: 7px;
+		vertical-align: middle;
+	}
 }
 @media (min-height: 357px) and (max-height: 576px) { /* SONY Reader PRS-T1 800x562 */
 	.big_symbol {
@@ -38,6 +55,13 @@
 	}
 	.small_symbol {
 		font-size:13px;
+	}
+	img {
+		width: 20px;
+	}
+	img.small {
+		width: 10px;
+		vertical-align: middle;
 	}
 }
 @media (min-height: 577px) and (max-height: 743px) {
@@ -53,6 +77,13 @@
 	.small_symbol {
 		font-size:15px;
 	}
+	img {
+		width: 30px;
+	}
+	img.small {
+		width: 15px;
+		vertical-align: middle;
+	}
 }
 @media (min-height: 744px) and (max-height: 899px) {
 	.big_symbol {
@@ -67,6 +98,13 @@
 	.small_symbol {
 		font-size:20px;
 	}
+	img {
+		width: 40px;
+	}
+	img.small {
+		width: 20px;
+		vertical-align: middle;
+	}
 }
 @media (min-height: 900px) {
 	.big_symbol {
@@ -80,6 +118,13 @@
 	}
 	.small_symbol {
 		font-size:30px;
+	}
+	img {
+		width: 50px;
+	}
+	img.small {
+		width: 25px;
+		vertical-align: middle;
 	}
 }
 .wb {
