--- a/dashboard.css
+++ b/dashboard.css
@@ -16,10 +16,20 @@ img {
 	}
 	img {
 		width: 10px;
+		height: auto;
 	}
 	img.small {
 		width: 5px;
+		height: auto;
 		vertical-align: middle;
+	}
+	img.vert {
+		width: auto;
+		height: 20px;
+	}
+	img.hor {
+		width: 20px;
+		height: auto;
 	}
 }
 @media (min-height: 256px) and (max-height: 356px) {
@@ -37,10 +47,20 @@ img {
 	}
 	img {
 		width: 15px;
+		height: auto;
 	}
 	img.small {
 		width: 7px;
+		height: auto;
 		vertical-align: middle;
+	}
+	img.vert {
+		width: auto;
+		height: 30px;
+	}
+	img.hor {
+		width: 30px;
+		height: auto;
 	}
 }
 @media (min-height: 357px) and (max-height: 576px) { /* SONY Reader PRS-T1 800x562 */
@@ -58,10 +78,20 @@ img {
 	}
 	img {
 		width: 20px;
+		height: auto;
 	}
 	img.small {
 		width: 10px;
+		height: auto;
 		vertical-align: middle;
+	}
+	img.vert {
+		height: 40px;
+		width: auto;
+	}
+	img.hor {
+		width: 40px;
+		height: auto;
 	}
 }
 @media (min-height: 577px) and (max-height: 743px) {
@@ -79,10 +109,20 @@ img {
 	}
 	img {
 		width: 30px;
+		height: auto;
 	}
 	img.small {
 		width: 15px;
+		height: auto;
 		vertical-align: middle;
+	}
+	img.vert {
+		height: 60px;
+		width: auto;
+	}
+	img.hor {
+		width: 60px;
+		height: auto;
 	}
 }
 @media (min-height: 744px) and (max-height: 899px) {
@@ -100,10 +140,20 @@ img {
 	}
 	img {
 		width: 40px;
+		height: auto;
 	}
 	img.small {
 		width: 20px;
+		height: auto;
 		vertical-align: middle;
+	}
+	img.vert {
+		width: auto;
+		height: 80px;
+	}
+	img.hor {
+		width: 80px;
+		height: auto;
 	}
 }
 @media (min-height: 900px) {
@@ -121,10 +171,20 @@ img {
 	}
 	img {
 		width: 50px;
+		height: auto;
 	}
 	img.small {
 		width: 25px;
+		height: auto;
 		vertical-align: middle;
+	}
+	img.vert {
+		width: auto;
+		height: 50px;
+	}
+	img.hor {
+		width: 50px;
+		height: auto;
 	}
 }
 .wb {
