bug fixed & improved

--- a/galadrielmap.css
+++ b/galadrielmap.css
@@ -215,7 +215,8 @@ ul { /* нужно, чтобы стили работали */
 	white-space: nowrap;
 }
 .currentTrackName {
-	background-color:  rgba(227, 231, 251, 0.5); /* бледно-голубой полупрозрачный */
+	background-color:  rgba(227, 231, 251, 0.8) /* бледно-голубой полупрозрачный Потому что так эти li разноцветные, и эти цвета сохраняются. Но текущий трек, типа, надо выделить */
+	/*background-color:  rgba(227, 231, 251, 0.8) !important; *//* бледно-голубой полупрозрачный Потому что так эти li разноцветные, и эти цвета сохраняются. Но текущий трек, типа, надо выделить */
 }
 .big_symbol {
 	height:90%;
