upd to GaladrielCache 2.8. params.php changed - update, pls.

--- a/galadrielmap.css
+++ b/galadrielmap.css
@@ -22,6 +22,7 @@
 }
 .disabled {
 	opacity:0.3; /* Полупрозрачность элемента */
+	/*visibility: hidden;*/
 }
 .leaflet-sidebar-close { 	/* уберём свойства, исходно приписываемые стилю. Но навешивание обработчика на этот стиль где-то в скрипте останется. В результате этим стилем мы можем навесить обработчик без порчи картинки. */
   position: unset;
