--- a/galadrielmap.css
+++ b/galadrielmap.css
@@ -284,22 +284,29 @@ ul { /* нужно, чтобы стили работали */
 	cursor: pointer;
     display: inline-block;
 	font-weight: bold;
-	font-size: 120%;
-	width: 47%;
+	width: 48%;
     border: 1px solid;
     border-radius: 5px;
     text-align: center;
-    padding: 0.5rem 0;
+    padding: 0;
 }
 .routeControls > input[type="radio"].L + label {
     /*border-right: none;*/
     border-radius: 5px 0px 0px 5px;
-    width:47%;
+    width:48%;
+    margin-top: 0.3em;
 }
 .routeControls > input[type="radio"].R + label {
     /*border-left: none;*/
     border-radius: 0px 5px 5px 0px;
-    width:47%;
+    width:48%;
+    margin-top: 0.3em;
+}
+.routeControls > input[type="radio"].M + label {
+    /*border-left: none;*/
+    width:80%;
+    font-size: 89%;
+    margin-top: 0.7em;
 }
 .routeControls > input[type="radio"]:checked + label {
 	background-color: rgb(233, 233, 233);
@@ -307,6 +314,22 @@ ul { /* нужно, чтобы стили работали */
 }
 .routeControls > input[type="radio"]:disabled + label {
 	opacity: 0.3;
+}
+
+.pointButton {
+	width:2rem;
+	padding:0 0.2em;
+	margin:0.1em 1em;
+}
+
+button:disabled {
+	opacity: 0.3;
+}
+
+.okButton {
+	width:2em;
+	padding:0.2em;
+	margin:0 0.5em;
 }
 
 /* копирование в буфер обмена */
@@ -348,22 +371,6 @@ ul { /* нужно, чтобы стили работали */
 }
 
 .scaledText {
-}
-
-.pointButton {
-	width:2rem;
-	padding:0.2rem;
-	margin:0 1rem;
-}
-
-.pointButton:disabled {
-	opacity: 0.2;
-}
-
-.okButton {
-	width:2rem;
-	padding:0.2rem;
-	margin:0 0.5rem;
 }
 
 .showedMapName {
